# pydongo

./: .bumpversion.cfg  .gitignore  .ruff.toml  .ruffignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: bump-and-tag.yml  ci.yml  code-quality.yml  create-tag.yml  github-release.yml  python-package.yml  quality-check-ci.yml  release-publish.yml  stable-branch-release.yml  stable-branch.yml  tag-on-merge.yml
ci/python/: check_version_bump.py  echo_version.py  patch_pyproject.py  preview_version.py
ci/sh/: tag.sh
collections/: index.html
docs/: collections.md  documents.md  drivers.md  dsl-querying.md  index.md  indexing.md  installation.md  quickstart.md  updates-with-mutations.md
documents/: index.html
drivers/: index.html
dsl-querying/: index.html
examples/: basic_usage.py
examples/async/: social_media_app.py
examples/sync/: medtech_app.py  social_media_app.py
indexing/: index.html
installation/: index.html
pydongo/: __init__.py
pydongo/drivers/: async_mongo.py  base.py  mock.py  sync_mongo.py
pydongo/expressions/: base.py  field.py  filter.py  index.py  sort.py
pydongo/models/: serializable_types.py
pydongo/utils/: annotations.py  serializer.py
pydongo/workers/: collection.py  document.py
quickstart/: index.html
scripts/: test-build.sh
search/: search_index.json
src/pydongo/: __init__.py
src/pydongo/drivers/: async_mongo.py  base.py  mock.py  motor.py  sync_mongo.py
src/pydongo/expressions/: base.py  field.py  filter.py  index.py  mutation.py
src/pydongo/utils/: annotations.py  serializer.py
src/pydongo/workers/: collection.py  document.py
tests/: conftest.py  resources.py  test_collection_builder_core.py  test_collection_naming_config.py  test_driver_mock.py  test_fictional_document_worker.py  test_field_expression.py  test_filter_expression.py  test_index_creation.py  test_index_creation_async.py  test_resolve_annotation.py  test_serializer_utils.py  test_serilizer_utils.py
updates-with-mutations/: index.html
